Do a probe whenever the edit modal is opened
This slows down UI interactions, but makes it much harder to
cause an error by using a non-attached input by accident,
which is very easy to do.

--- a/settings-ui/src/i18n/translation/en.json
+++ b/settings-ui/src/i18n/translation/en.json
@@ -1,5 +1,6 @@
 {
   "Loading": "Loading",
+  "Probing": "Detecting inputs",
   "ShitsFuckedYo": "A fatal error occurred :(",
 
   "Cancel": "Cancel",
