--- a/settings-ui/src/i18n/translation/nl.json
+++ b/settings-ui/src/i18n/translation/nl.json
@@ -1,5 +1,6 @@
 {
   "Loading": "Loading",
+  "Probing": "Detecting inputs",
   "ShitsFuckedYo": "A fatal error occurred :(",
 
   "Cancel": "Cancel",
